--- a/about/index.html
+++ b/about/index.html
@@ -9,3 +9,7 @@ title: Hank Quinlan's About
 	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
 	  {% endfor %}
 	</ul>
+
+# About Me
+
+This is where you can put your bio or other information.
