--- a/about/index.html
+++ b/about/index.html
@@ -1,17 +1,7 @@
 ---
-layout: page
+layout: default
 title: "About Me"
 ---
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Me</title>
-  <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
-</head>
-<body>
 
   <header>
     <h1>About Me</h1>
