--- a/about/index.html
+++ b/about/index.html
@@ -10,17 +10,16 @@ title: "About Me"
 
   <section id="introduction">
     <h2>Introduction</h2>
-    <p>Hello! I'm [Your Name], a passionate web developer with experience in front-end technologies like HTML, CSS, and JavaScript. I love building things that make the web more interactive and engaging.</p>
-    <p>When I'm not coding, I enjoy hiking, reading, and exploring new technologies.</p>
+    <p>Hello! I'm Hank Quinlan, a police captain working in a border town on the U.S Mexico border.</p>
+    <p>I am a key character in Orson Welles' 1958 film "A Touch of Evil", and was portrayed by the author himself.</p>
   </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
+  <section id="key traits">
+    <h2>Key Traits</h2>
     <ul>
-      <li><strong>Languages:</strong> HTML, CSS, JavaScript, Python</li>
-      <li><strong>Frameworks & Tools:</strong> React, Jekyll, Node.js, Git, Bootstrap</li>
-      <li><strong>Design Tools:</strong> Figma, Adobe XD</li>
-      <li><strong>Databases:</strong> MySQL, MongoDB</li>
+      <li><strong>Corruption and Moral Decay:</strong> I represent the archetype of a man who has abandoned ethical considerations in my pursuit of justice</li>
+      <li><strong>Insecurity and Self Delusion:</strong> Despite my outward confidence, I am internally insecure, and frequently lie to myself about my own moral standing</li>
+      <li><strong>Manipulation and Betrayal:</strong> I use my power and authority as police captain to manipulate those around me, including my colleagues</li>
     </ul>
   </section>
 
@@ -30,14 +29,8 @@ title: "About Me"
     <p>In addition to my formal education, I have completed several online courses in web development, UI/UX design, and software engineering.</p>
   </section>
 
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to reach out to me through the following:</p>
-    <ul>
-      <li>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a></li>
-      <li>GitHub: <a href="https://github.com/yourusername" target="_blank">GitHub Profile</a></li>
-    </ul>
+  <section id="comment">
+    <p>I hope I didn't scare you away with my bio...</p>
   </section>
 
   <footer>
@@ -46,12 +39,3 @@ title: "About Me"
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
