--- a/about/index.html
+++ b/about/index.html
@@ -29,12 +29,8 @@ title: "About Me"
     <p>In addition to my formal education, I have completed several online courses in web development, UI/UX design, and software engineering.</p>
   </section>
 
-  <section id="comment">
-    <p>I hope I didn't scare you away with my bio...</p>
-  </section>
-
   <footer>
-    <p>Thank you for visiting my site!</p>
+    <p>I hope I didn't scare you away with my bio. Thank you for visiting my site!</p>
   </footer>
 
 </body>
