--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan's CV
+title: Sydney Brutus' CV
 permalink: /cv/
 ---
 
@@ -11,19 +11,19 @@ permalink: /cv/
 
   <section id="personal-info">
     <h2>Personal Information</h2>
-    <p><strong>Name:</strong> Hank Quinlan</p>
-    <p><strong>Location:</strong>Border Town, U.S.-Mexico Border</p>
+    <p><strong>Name:</strong> Sydney Brutus</p>
+    <p><strong>Location:</strong>Waldorf, Maryland, United States</p>
   </section>
 
   <section id="work-experience">
     <h2>Work Experience</h2>
     <div class="job">
-      <h3>Lead Detective - Border Town Police Department <span class="dates">Over 30 Years of Service</span></h3>
-      <p><strong>Description:</strong> Describe your role, responsibilities, and any key achievements or projects you worked on. For example:</p>
+      <h3>Software Engineering Intern <span class="dates">June 2024 - August 2024</span></h3>
       <ul>
-        <li>Oversaw investigations in a high-crime, politically unstable border region known for drug trafficking and violence</li>
-        <li>Experienced in dealing with cross-border criminal operations and political tensions between U.S. and Mexican authorities.</li>
-        <li>Conducted numerous investigations that led to high-profile arrests,</li>
+        <li>Supported the advisory team to find and provide requested client information to the threat intelligence team.</li>
+        <li>Assisted with cybersecurity monitoring, incident response, and engineering teams.</li>
+        <li>Began developing a conversational chatbot in C# with Microsoft’s Bot Framework Composer, QnA Maker, and
+LUIS.</li>
       </ul>
     </div>
   </section>
@@ -31,30 +31,34 @@ permalink: /cv/
   <section id="education">
     <h2>Education</h2>
     <div class="degree">
-      <h3>Self-Taught</h3>
-      <p><strong>Description:</strong> Field experience and training in criminal investigation.</p>
-    </div>
-    <div class="degree">
-      <h3>Rudimentary Training</h3>
-      <p><strong>Description:</strong> Limited formal education in criminal law and ethical policing, with an emphasis on practical experience in the field.</p>
+      <h3>Bachelor of Science in Computer Science - Bowie State University</h3>
+      <p><strong>Description:</strong> Enrolled August 2021 - Expected May 2025</p>
     </div>
   </section>
 
-  <section id="skills">
-    <h2>Skills</h2>
+  <section id="programming languages">
+    <h2>Programming Languages</h2>
     <ul>
-      <li><strong>Manipulation and Coercion</strong></li>
-      <li><strong>Investigation</strong></li>
-      <li><strong>Leadership</strong></li>
-      <li><strong>Conflict Resolution</strong></li>
+      <li><strong>C++</strong></li>
+      <li><strong>Python</strong></li>
+      <li><strong>C</strong></li>
+      <li><strong>JavaScript</strong></li>
     </ul>
   </section>
 
-  <section id="languages">
-    <h2>Languages</h2>
+  <section id="Collegiate Activities">
+    <h2>Collegiate Activities</h2>
     <ul>
-      <li><strong>English</strong>: Fluent</li>
-      <li><strong>Spanish</strong>: Basic</li>
+      <li><strong>Women in Computer Science</strong>: October 2022 - Present</li>
+      <li><strong>Bulldog Coders</strong>: February 2023 - December 2023</li>
+    </ul>
+  </section> 
+
+<section id="Contact Information">
+    <h2>Contact Information</h2>
+    <ul>
+      <li><strong>Email Address: </strong>: brutuss0801@students.bowiestate.edu</li>
+      <li><strong>Github Page: </strong>: https://sydn-b.github.io </li>
     </ul>
   </section>
 
