--- a/about/index.html
+++ b/about/index.html
@@ -10,21 +10,21 @@ title: "About Me"
 
   <section id="introduction">
     <h2>Introduction</h2>
-    <p>Hello! I'm Hank Quinlan, a police captain working in a border town on the U.S Mexico border.</p>
-    <p>I am a key character in Orson Welles' 1958 film "A Touch of Evil", and was portrayed by the author himself.</p>
+    <p>Hello! I'm Sydney Brutus, a college student at Bowie State University who is graduating in May 2025.</p>
+    <p>I am a computer science student who has experienced several vital courseworks such as Data Structures and Algorithms, Systems Programming, and Software Engineering.</p>
   </section>
 
   <section id="key traits">
-    <h2>Key Traits</h2>
+    <h2>Interests</h2>
     <ul>
-      <li><strong>Corruption and Moral Decay:</strong> I represent the archetype of a man who has abandoned ethical considerations in my pursuit of justice</li>
-      <li><strong>Insecurity and Self Delusion:</strong> Despite my outward confidence, I am internally insecure, and frequently lie to myself about my own moral standing</li>
-      <li><strong>Manipulation and Betrayal:</strong> I use my power and authority as police captain to manipulate those around me, including my colleagues</li>
+      <li><strong>Gaming:</strong> I enjoy playing video games on consoles like the Playstation, PC game decks, and the Nintendo Switch.</li>
+      <li><strong>Crafting:</strong> I create crafting many projects specificially with crochet, but I also am experienced in small origami.</li>
+      <li><strong>Writing:</strong> Whether for a school assignment or a personal project, I enjoy writing stories and drafting a world using words.</li>
     </ul>
   </section>
 
   <footer>
-    <p>I hope I didn't scare you away with my bio. Thank you for visiting my site!</p>
+    <p>This is my first attempt at making a website, thank you for visiting!</p>
   </footer>
 
 </body>
